// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Column And Row Headers 1`] = `
<table
  data-hover="true"
  data-color="accent"
  data-tinted-column-header="true"
  data-tinted-row-header="true"
>
  <caption style="font-size: var(--ds-font-size-3); caption-side: bottom; text-align: center; font-weight: normal; margin-top: var(--ds-size-2);">
    Svarprosent for elevundersøkelsen nasjonalt
  </caption>
  <thead>
    <tr>
      <td>
      </td>
      <th scope="col">
        2022–23
      </th>
      <th scope="col">
        2023–24
      </th>
      <th scope="col">
        2024–25
      </th>
    </tr>
  </thead>
  <tbody style="text-align: right;">
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        <svg
          xmlns="http://www.w3.org/2000/svg"
          width="1em"
          height="1em"
          fill="none"
          viewbox="0 0 24 24"
          focusable="false"
          role="img"
          aria-hidden="true"
        >
          <path
            fill="currentColor"
            fill-rule="evenodd"
            d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
            clip-rule="evenodd"
          >
          </path>
        </svg>
        8. trinn
      </th>
      <td>
        88,5%
      </td>
      <td>
        86,3%
      </td>
      <td>
        85,3%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Fra Oslo
      </th>
      <td>
        30,5%
      </td>
      <td>
        1,3%
      </td>
      <td>
        23,3%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        9. trinn
      </th>
      <td>
        88,7%
      </td>
      <td>
        86,3%
      </td>
      <td>
        84,9%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        10. trinn
      </th>
      <td>
        89,7%
      </td>
      <td>
        87,3%
      </td>
      <td>
        85,7%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Vg1
      </th>
      <td>
        84,8%
      </td>
      <td>
        82,8%
      </td>
      <td>
        83,1%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Vg2
      </th>
      <td>
        82,5%
      </td>
      <td>
        80,0%
      </td>
      <td>
        80,3%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Vg3
      </th>
      <td>
        79,9%
      </td>
      <td>
        75,7%
      </td>
      <td>
        76,9%
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Fixed Table 1`] = `
<div>
  <table
    id="myTable"
    style="table-layout: fixed; margin-bottom: 12px;"
  >
    <caption>
      Tildeling skolebibliotek 2024
    </caption>
    <thead>
      <tr>
        <th>
          Kommune
        </th>
        <th>
          Tildeling (kr)
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Bjerkreim kommune
        </td>
        <td style="font-feature-settings: &quot;tnum&quot;;">
          330 000
        </td>
      </tr>
      <tr>
        <td>
          Færder kommune
        </td>
        <td style="font-feature-settings: &quot;tnum&quot;;">
          750 000
        </td>
      </tr>
      <tr>
        <td>
          Gjøvik kommune
        </td>
        <td style="font-feature-settings: &quot;tnum&quot;;">
          150 000
        </td>
      </tr>
      <tr>
        <td>
          Hurdal kommune
        </td>
        <td style="font-feature-settings: &quot;tnum&quot;;">
          550 000
        </td>
      </tr>
      <tr>
        <td>
          Marker kommune
        </td>
        <td style="font-feature-settings: &quot;tnum&quot;;">
          900 000
        </td>
      </tr>
    </tbody>
  </table>
  <nav aria-label="Sidenavigering">
    <ul>
      <li>
        <button
          aria-disabled="true"
          data-variant="tertiary"
          type="button"
          aria-label="Forrige side"
        >
          Forrige
        </button>
      </li>
      <li>
        <button
          data-variant="primary"
          type="button"
          aria-label="Side 1"
          aria-current="page"
        >
          1
        </button>
      </li>
      <li>
        <button
          data-variant="tertiary"
          type="button"
          aria-label="Side 2"
        >
          2
        </button>
      </li>
      <li>
        <button
          data-variant="tertiary"
          type="button"
          aria-label="Side 3"
        >
          3
        </button>
      </li>
      <li>
        <button
          aria-disabled="false"
          data-variant="tertiary"
          type="button"
          aria-label="Neste side"
        >
          Neste
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Multiple Header Rows 1`] = `
<table
  data-zebra="true"
  data-color="support1"
  data-tinted-column-header="true"
  data-tinted-row-header="true"
>
  <thead>
    <tr>
      <td>
      </td>
      <th
        colspan="5"
        style="text-align: center;"
      >
        Trives du på skolen?
      </th>
    </tr>
    <tr>
      <td>
      </td>
      <th>
        Trives ikke i det hele tatt
      </th>
      <th>
        Trives ikke noe særlig
      </th>
      <th>
        Trives litt
      </th>
      <th>
        Trives godt
      </th>
      <th>
        Trives svært godt
      </th>
    </tr>
  </thead>
  <tbody style="text-align: right;">
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Idrettsfag
      </th>
      <td>
        0,5%
      </td>
      <td>
        1,0%
      </td>
      <td>
        5,7%
      </td>
      <td>
        46,0%
      </td>
      <td>
        46,9%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Medier og kommunikasjon
      </th>
      <td>
        1,2%
      </td>
      <td>
        1,9%
      </td>
      <td>
        11,3%
      </td>
      <td>
        49,4%
      </td>
      <td>
        36,1%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Musikk, dans og drama
      </th>
      <td>
        -
      </td>
      <td>
        -
      </td>
      <td>
        7,0%
      </td>
      <td>
        41,9%
      </td>
      <td>
        49,8%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        Studiespesialisering
      </th>
      <td>
        1,2%
      </td>
      <td>
        1,8%
      </td>
      <td>
        8,9%
      </td>
      <td>
        49,8%
      </td>
      <td>
        38,3%
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Preview 1`] = `
<table data-color="neutral">
  <caption>
    Sensur FSP6236 Tegnspråk III
  </caption>
  <thead>
    <tr>
      <th>
        <div>
          <input
            aria-label="Velg alle ansatte"
            id="checkbox-select-all"
            type="checkbox"
            value
            name="my-checkbox"
          >
        </div>
      </th>
      <th aria-sort="none">
        <button type="button">
          Navn
        </button>
      </th>
      <th>
        E-post
      </th>
      <th>
        Status
      </th>
      <th>
        Besvarelser
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          <input
            id="checkbox-1"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="1"
            name="my-checkbox"
          >
        </div>
      </td>
      <td>
        Rita Nordmann
      </td>
      <td>
        rita@nordmann.no
      </td>
      <td>
        <span data-color="info">
          I arbeid
        </span>
      </td>
      <td style="text-align: right;">
        19
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            id="checkbox-2"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="2"
            name="my-checkbox"
          >
        </div>
      </td>
      <td>
        Kari Nordmann
      </td>
      <td>
        kari@nordmann.no
      </td>
      <td>
        <span data-color="success">
          Ferdig
        </span>
      </td>
      <td style="text-align: right;">
        0
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            id="checkbox-3"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="3"
            name="my-checkbox"
          >
        </div>
      </td>
      <td>
        Ola Nordmann
      </td>
      <td>
        ola@nordmann.no
      </td>
      <td>
        <span data-color="info">
          I arbeid
        </span>
      </td>
      <td style="text-align: right;">
        14
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            id="checkbox-4"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="4"
            name="my-checkbox"
          >
        </div>
      </td>
      <td>
        Kai Nordmann
      </td>
      <td>
        kai@nordmann.no
      </td>
      <td>
        <span data-color="warning">
          Ikke begynt
        </span>
      </td>
      <td style="text-align: right;">
        35
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            id="checkbox-5"
            aria-label="Velg [object Object]"
            type="checkbox"
            value="5"
            name="my-checkbox"
          >
        </div>
      </td>
      <td>
        Mateo Nordmann
      </td>
      <td>
        mateo@nordmann.no
      </td>
      <td>
        <span data-color="success">
          Ferdig
        </span>
      </td>
      <td style="text-align: right;">
        0
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <td colspan="4">
        Totalt gjenstår
      </td>
      <td style="text-align: right;">
        68
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`Sortable 1`] = `
<table>
  <thead>
    <tr>
      <th aria-sort="none">
        <button type="button">
          Navn
        </button>
      </th>
      <th>
        Epost
      </th>
      <th aria-sort="none">
        <button type="button">
          Telefon
        </button>
      </th>
      <th aria-sort="none">
        <button type="button">
          Rolle
        </button>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        Rita Nordmann
      </td>
      <td>
        rita@nordmann.no
      </td>
      <td>
        22345678
      </td>
      <td>
        Rektor
      </td>
    </tr>
    <tr>
      <td>
        Kari Nordmann
      </td>
      <td>
        kari@nordmann.no
      </td>
      <td>
        87654321
      </td>
      <td>
        Lektor
      </td>
    </tr>
    <tr>
      <td>
        Ola Nordmann
      </td>
      <td>
        ola@nordmann.no
      </td>
      <td>
        32345678
      </td>
      <td>
        Lektor
      </td>
    </tr>
    <tr>
      <td>
        Kai Nordmann
      </td>
      <td>
        kai@nordmann.no
      </td>
      <td>
        62353278
      </td>
      <td>
        Lektor
      </td>
    </tr>
    <tr>
      <td>
        Mateo Nordmann
      </td>
      <td>
        mateo@nordmann.no
      </td>
      <td>
        12345678
      </td>
      <td>
        Ass. rektor
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Sticky Header 1`] = `
<h2 style="margin-bottom: var(--ds-size-3);">
  Ansattes utdanning fordelt på eiertype (ordinære), 2021
</h2>
<div style="height: 420px; width: 580px; overflow: auto; padding: 0px;">
  <table
    data-sticky-header="true"
    data-zebra="true"
    tabindex="0"
    data-color="support1"
    data-tinted-column-header="true"
    data-tinted-row-header="true"
  >
    <thead>
      <tr>
        <td>
        </td>
        <th>
          5 store
        </th>
        <th>
          Andre kjeder
        </th>
        <th>
          Frittstående
        </th>
        <th>
          Kommune
        </th>
        <th>
          Totalt
        </th>
      </tr>
    </thead>
    <tbody style="text-align: right;">
      <tr>
        <th
          scope="row"
          style="text-align: left;"
        >
          Barnehagelærer
        </th>
        <td>
          42,9%
        </td>
        <td>
          42,9%
        </td>
        <td>
          43,8%
        </td>
        <td>
          43,9%
        </td>
        <td>
          43,6%
        </td>
      </tr>
      <tr>
        <th
          scope="row"
          style="text-align: left;"
        >
          Annen pedagogisk utdanning
        </th>
        <td>
          1,9%
        </td>
        <td>
          2,8%
        </td>
        <td>
          2,0%
        </td>
        <td>
          1,3%
        </td>
        <td>
          1,7%
        </td>
      </tr>
      <tr>
        <th
          scope="row"
          style="text-align: left;"
        >
          Annen høyere utdanning
        </th>
        <td>
          2,2%
        </td>
        <td>
          2,7%
        </td>
        <td>
          2,2%
        </td>
        <td>
          1,2%
        </td>
        <td>
          1,8%
        </td>
      </tr>
      <tr>
        <th
          scope="row"
          style="text-align: left;"
        >
          Barne- og ungdomsarbeider
        </th>
        <td>
          15,0%
        </td>
        <td>
          16,4%
        </td>
        <td>
          18,4%
        </td>
        <td>
          27,7%
        </td>
        <td>
          22,3%
        </td>
      </tr>
      <tr>
        <th
          scope="row"
          style="text-align: left;"
        >
          Annet fagarbeider
        </th>
        <td>
          5,2%
        </td>
        <td>
          4,6%
        </td>
        <td>
          5,3%
        </td>
        <td>
          5,3%
        </td>
        <td>
          5,2%
        </td>
      </tr>
      <tr>
        <th
          scope="row"
          style="text-align: left;"
        >
          Annen bakgrunn
        </th>
        <td>
          32,8%
        </td>
        <td>
          30,5%
        </td>
        <td>
          28,3%
        </td>
        <td>
          20,6%
        </td>
        <td>
          25,5%
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Tree Structured Table 1`] = `
<table
  data-zebra="true"
  data-color="support1"
  data-tinted-column-header="true"
  data-tinted-row-header="true"
>
  <caption style="font-size: var(--ds-font-size-3); caption-side: bottom; text-align: center; font-weight: normal; margin-top: var(--ds-size-2);">
    Svarprosent for elevundersøkelsen nasjonalt
  </caption>
  <thead>
    <tr>
      <td>
      </td>
      <th scope="col">
        2022–23
      </th>
      <th scope="col">
        2023–24
      </th>
      <th scope="col">
        2024–25
      </th>
    </tr>
  </thead>
  <tbody style="text-align: right;">
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        <button
          type="button"
          aria-expanded="false"
          aria-controls="rowgroup-8trinn"
          style="color-scheme: unset; forced-color-adjust: unset; mask: unset; math-depth: unset; position: unset; position-anchor: unset; text-size-adjust: unset; appearance: unset; color: unset; font: unset; font-palette: unset; font-synthesis: unset; position-area: unset; text-orientation: unset; text-rendering: unset; text-spacing-trim: unset; -webkit-font-smoothing: unset; -webkit-locale: unset; -webkit-text-orientation: unset; -webkit-writing-mode: unset; writing-mode: unset; zoom: unset; accent-color: unset; place-content: unset; align-items: center; place-self: unset; alignment-baseline: unset; anchor-name: unset; anchor-scope: unset; animation-composition: unset; animation: unset; app-region: unset; aspect-ratio: unset; backdrop-filter: unset; backface-visibility: unset; background: unset; background-blend-mode: unset; baseline-shift: unset; baseline-source: unset; block-size: unset; border-block: unset; border: unset; border-radius: unset; border-collapse: unset; border-end-end-radius: unset; border-end-start-radius: unset; border-inline: unset; border-start-end-radius: unset; border-start-start-radius: unset; inset: unset; box-decoration-break: unset; box-shadow: unset; box-sizing: unset; break-after: unset; break-before: unset; break-inside: unset; buffered-rendering: unset; caption-side: unset; caret-animation: unset; caret-color: unset; clear: unset; clip: unset; clip-path: unset; clip-rule: unset; color-interpolation: unset; color-interpolation-filters: unset; color-rendering: unset; columns: unset; column-fill: unset; gap: 0.5rem; column-rule: unset; column-span: unset; contain: unset; contain-intrinsic-block-size: unset; contain-intrinsic-size: unset; contain-intrinsic-inline-size: unset; container: unset; content: unset; content-visibility: unset; corner-shape: unset; corner-block-end-shape: unset; corner-block-start-shape: unset; counter-increment: unset; counter-reset: unset; counter-set: unset; cursor: pointer; cx: unset; cy: unset; d: unset; display: inline-flex; dominant-baseline: unset; dynamic-range-limit: unset; empty-cells: unset; field-sizing: unset; fill: unset; fill-opacity: unset; fill-rule: unset; filter: unset; flex: unset; flex-flow: unset; float: unset; flood-color: unset; flood-opacity: unset; grid: unset; grid-area: unset; height: unset; hyphenate-character: unset; hyphenate-limit-chars: unset; hyphens: unset; image-orientation: unset; image-rendering: unset; initial-letter: unset; inline-size: unset; inset-block: unset; inset-inline: unset; interpolate-size: unset; isolation: unset; justify-items: unset; letter-spacing: unset; lighting-color: unset; line-break: unset; list-style: unset; margin-block: unset; margin: unset; margin-inline: unset; marker: unset; mask-type: unset; math-shift: unset; math-style: unset; max-block-size: unset; max-height: unset; max-inline-size: unset; max-width: unset; min-block-size: unset; min-height: unset; min-inline-size: unset; min-width: unset; mix-blend-mode: unset; object-fit: unset; object-position: unset; object-view-box: unset; offset: unset; opacity: unset; order: unset; orphans: unset; outline: unset; outline-offset: unset; overflow-anchor: unset; overflow-block: unset; overflow-clip-margin: unset; overflow-inline: unset; overflow-wrap: unset; overflow: unset; overlay: unset; overscroll-behavior-block: unset; overscroll-behavior-inline: unset; overscroll-behavior: unset; padding-block: unset; padding-bottom: unset; padding-inline: unset; padding-left: calc(var(--ds-size-3) * 0); padding-right: unset; padding-top: unset; page: unset; page-orientation: unset; paint-order: unset; perspective: unset; perspective-origin: unset; pointer-events: unset; position-try: unset; position-visibility: unset; print-color-adjust: unset; quotes: unset; r: unset; reading-flow: unset; reading-order: unset; resize: unset; rotate: unset; ruby-align: unset; ruby-position: unset; rx: unset; ry: unset; scale: unset; scroll-behavior: unset; scroll-initial-target: unset; scroll-margin-block: unset; scroll-margin: unset; scroll-margin-inline: unset; scroll-marker-group: unset; scroll-padding-block: unset; scroll-padding: unset; scroll-padding-inline: unset; scroll-snap-align: unset; scroll-snap-stop: unset; scroll-snap-type: unset; scroll-target-group: unset; scroll-timeline: unset; scrollbar-color: unset; scrollbar-gutter: unset; scrollbar-width: unset; shape-image-threshold: unset; shape-margin: unset; shape-outside: unset; shape-rendering: unset; size: unset; speak: unset; stop-color: unset; stop-opacity: unset; stroke: unset; stroke-dasharray: unset; stroke-dashoffset: unset; stroke-linecap: unset; stroke-linejoin: unset; stroke-miterlimit: unset; stroke-opacity: unset; stroke-width: unset; tab-size: unset; table-layout: unset; text-align: unset; text-align-last: unset; text-anchor: unset; text-autospace: unset; text-box: unset; text-combine-upright: unset; text-decoration: unset; text-decoration-skip-ink: unset; text-emphasis: unset; text-emphasis-position: unset; text-indent: unset; text-overflow: unset; text-shadow: unset; text-transform: unset; text-underline-offset: unset; text-underline-position: unset; text-wrap: unset; timeline-scope: unset; touch-action: unset; transform: unset; transform-box: unset; transform-origin: unset; transform-style: unset; transition: unset; translate: <removed>; user-select: unset; vector-effect: unset; vertical-align: unset; view-timeline: unset; view-transition-class: unset; view-transition-group: unset; view-transition-name: unset; visibility: unset; border-spacing: unset; -webkit-box-align: unset; -webkit-box-decoration-break: unset; -webkit-box-direction: unset; -webkit-box-flex: unset; -webkit-box-ordinal-group: unset; -webkit-box-orient: unset; -webkit-box-pack: unset; -webkit-box-reflect: unset; -webkit-line-break: unset; -webkit-line-clamp: unset; -webkit-mask-box-image: unset; -webkit-rtl-ordering: unset; -webkit-ruby-position: unset; -webkit-tap-highlight-color: unset; -webkit-text-combine: unset; -webkit-text-decorations-in-effect: unset; -webkit-text-fill-color: unset; -webkit-text-security: unset; -webkit-text-stroke: unset; -webkit-user-drag: unset; white-space-collapse: unset; widows: unset; width: unset; will-change: unset; word-break: unset; word-spacing: unset; x: unset; y: unset; z-index: unset;"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              fill-rule="evenodd"
              d="M9.47 5.97a.75.75 0 0 1 1.06 0l5.5 5.5a.75.75 0 0 1 0 1.06l-5.5 5.5a.75.75 0 1 1-1.06-1.06L14.44 12 9.47 7.03a.75.75 0 0 1 0-1.06"
              clip-rule="evenodd"
            >
            </path>
          </svg>
          8. trinn
        </button>
      </th>
      <td style="text-align: right;">
        88,5%
      </td>
      <td style="text-align: right;">
        86,3%
      </td>
      <td style="text-align: right;">
        85,3%
      </td>
    </tr>
    <tr>
      <th
        scope="row"
        style="text-align: left;"
      >
        <span style="padding-left: calc(var(--ds-size-7) * 0);">
          9. trinn
        </span>
      </th>
      <td style="text-align: right;">
        88,7%
      </td>
      <td style="text-align: right;">
        86,3%
      </td>
      <td style="text-align: right;">
        84,9%
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Tree Table 1`] = `
<table data-color="accent">
  <caption style="font-size: var(--ds-font-size-3); caption-side: bottom; text-align: center; font-weight: normal; margin-top: var(--ds-size-2);">
    Svarprosent for elevundersøkelsen nasjonalt
  </caption>
  <thead>
    <tr>
      <td>
      </td>
    </tr>
  </thead>
  <tbody style="text-align: right;">
  </tbody>
</table>
`;

exports[`With Border 1`] = `
<div style="display: grid; gap: 1rem;">
  <table
    data-border="true"
    data-color="support2"
    data-tinted-column-header="true"
    data-tinted-row-header="true"
  >
    <thead>
      <tr>
        <th>
          Navn
        </th>
        <th>
          Rolle
        </th>
        <th>
          Epost
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Rita Nordmann
        </td>
        <td>
          Rektor
        </td>
        <td>
          rita@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Kari Nordmann
        </td>
        <td>
          Lektor
        </td>
        <td>
          kari@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Ola Nordmann
        </td>
        <td>
          Lektor
        </td>
        <td>
          ola@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Kai Nordmann
        </td>
        <td>
          Lektor
        </td>
        <td>
          kai@nordmann.no
        </td>
      </tr>
      <tr>
        <td>
          Mateo Nordmann
        </td>
        <td>
          Ass. rektor
        </td>
        <td>
          mateo@nordmann.no
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`With Form Elements 1`] = `
<table>
  <thead>
    <tr>
      <th>
        <div>
          <input
            aria-label="Select all"
            id="components-table--with-form-elements-selectAll"
            type="checkbox"
            value
            name="components-table--with-form-elements-checkboxGroup"
          >
        </div>
      </th>
      <th>
        nr.
      </th>
      <th>
        Spørsmål
      </th>
      <th>
        Alternativ 1
      </th>
      <th>
        Alternativ 2
      </th>
    </tr>
  </thead>
  <tbody style="place-content: start center; align-items: center;">
    <tr>
      <td>
        <div>
          <input
            aria-label="Check 1"
            id="components-table--with-form-elements-select1"
            type="checkbox"
            value="1"
            name="components-table--with-form-elements-checkboxGroup"
          >
        </div>
      </td>
      <td>
        1.
      </td>
      <td style="min-width: 200px;">
        <div data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-1"
              id="components-table--with-form-elements-textfield1-1"
              type="text"
              value="Trives du på skolen?"
            >
          </div>
        </div>
      </td>
      <td style="min-width: 200px;">
        <div data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-2"
              id="components-table--with-form-elements-textfield1-2"
              type="text"
              value="Trives ikke noe særlig"
            >
          </div>
        </div>
      </td>
      <td style="min-width: 200px;">
        <div data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-3"
              id="components-table--with-form-elements-textfield1-3"
              type="text"
              value="Trives godt"
            >
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          <input
            aria-label="Check 1"
            id="components-table--with-form-elements-select1"
            type="checkbox"
            value="2"
            checked
            name="components-table--with-form-elements-checkboxGroup"
          >
        </div>
      </td>
      <td>
        2.
      </td>
      <td>
        <div
          data-size="sm"
          style="width: 250px;"
        >
          <div>
            <input
              aria-label="Textfield 1-1"
              id="components-table--with-form-elements-textfield1-1"
              type="text"
              value="Har du opplevd mobbing?"
            >
          </div>
        </div>
      </td>
      <td>
        <div data-size="sm">
          <div>
            <input
              aria-label="Textfield 1-2"
              id="components-table--with-form-elements-textfield1-2"
              type="text"
              value="Sjelden"
            >
          </div>
        </div>
      </td>
      <td>
        <div data-size="sm">
          <div>
            <input
              cols="3"
              aria-label="Textfield 1-3"
              id="components-table--with-form-elements-textfield1-3"
              type="text"
              value="Ofte"
            >
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
